wingui NEWS
===========

Version 0.3
-----------
* Added `is_npptor_running`
* Added `win_process_running`
* Added `overwrite` option to `npptor`
* Updated exports to include:
    + `win_processes`
    + `win_users`
    + `win_kill`
    + `whos_the_hog`

Version 0.2
-----------
* Added opacity/transparency to WindowsGUI
* Added on.top to WindowsGUI
* Added read_lnk for reading windows shorcut files.
* Added win_processes for reading processes.
* Added win_users for listing logged on users
* Added win_load for listing the load on the CPU(s)
* Added win_kill for killing processes
* Added whos_the_hog for summarizing resource usage by users
* Added npptor, npp, and support functions find_npp, find_npptor
* Added is_r_startup

Version 0.1
-----------
* initial release
* allows changing the window title.